Adjusted layout for header on mobile, and edited h1 sizing to be correct on all screen sizes

--- a/styles/header.css
+++ b/styles/header.css
@@ -1,7 +1,16 @@
 .headerContainer {
     display: grid;
     grid-template-columns: 1.5fr 1fr;
-    /* height: 40rem; */
+    grid-template-rows: none;
+}
+
+@media screen and (max-width: 768px) {
+    .headerContainer {
+        display: grid;
+        width: 100%;
+        grid-template-columns: none;
+        grid-template-rows: repeat(2, 1fr);
+    }
 }
 
 .headerDiv1 {
