--- a/styles/main.css
+++ b/styles/main.css
@@ -17,3 +17,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&display=swap');
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
